--- a/node1_ML.ipynb
+++ b/node1_ML.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "data = pd.read_csv('node1_data.csv')"
+    "data = pd.read_csv('node3_data.csv')"
    ]
   },
   {
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute charge_required - this is a simplistic way and may be improved with time series analysis\n",
-    "data['charge_required'] = data['charge'].shift(-1) < 20  # This assumes the data is in hourly intervals\n",
-    "data.dropna(inplace=True)  # Drop last row as we don't have future data for it"
+    "# Feature Engineering\n",
+    "# Calculate the rolling average of consumption over 3 intervals (you can adjust this)\n",
+    "data['rolling_avg_consumption'] = data['consumption'].rolling(window=3).mean()\n"
    ]
   },
   {
@@ -39,15 +39,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature selection\n",
-    "features = ['current_speed', 'battery_capacity', 'charge', 'consumption', 'distance_covered']\n",
+    "# Calculate change in charge over the last interval\n",
+    "data['charge_diff'] = data['charge'].diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping NaN values resulting from the rolling function and diff function\n",
+    "data.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a more dynamic threshold for charging based on charge and distance to charging point\n",
+    "# (for example, if charge drops below 20 or if there's not enough charge to reach the charging point)\n",
+    "data['charge_required'] = (data['charge'] < 20) | (data['charge'] * data['battery_life'] < data['distance_to_charging_point'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Selection\n",
+    "features = [\n",
+    "    'current_speed', 'charge', 'consumption', 'distance_covered',\n",
+    "    'battery_capacity', 'battery_life', 'distance_to_charging_point',\n",
+    "    'rolling_avg_consumption', 'charge_diff'\n",
+    "]\n",
     "X = data[features]\n",
     "y = data['charge_required']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +104,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -102,11 +137,11 @@
       "1.0\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       False       1.00      1.00      1.00       932\n",
+      "       False       1.00      1.00      1.00       486\n",
       "\n",
-      "    accuracy                           1.00       932\n",
-      "   macro avg       1.00      1.00      1.00       932\n",
-      "weighted avg       1.00      1.00      1.00       932\n",
+      "    accuracy                           1.00       486\n",
+      "   macro avg       1.00      1.00      1.00       486\n",
+      "weighted avg       1.00      1.00      1.00       486\n",
       "\n"
      ]
     }
@@ -116,6 +151,13 @@
     "print(accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
